# circlemud_modern

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
cmake/: broken_crypt_test.c  configure_checks.cmake  windows_cache.cmake
doc/: README  act.txt  coding.txt
src/: act.comm.c  act.h  act.informative.c  act.item.c  act.movement.c  act.offensive.c  act.other.c  act.social.c  act.wizard.c  act_acmd.h  act_comm.c  act_informative.c  act_item.c  act_movement.c  act_offensive.c  act_other.c  act_social.c  act_wizard.c  aedit.c  argparse.c  asciimap.c  asciimap.h  ban.c  ban.h  boards.c  boards.h  bsd-snprintf.c  castle.c  cedit.c  circle3.c  class.c  class.h  comm.c  comm.h  conf.h.cmakein  conf.h.msvc  config.c  config.h  constants.c  db.c  (+114 more)
src/util/: asciipasswd.c  autowiz.c  plrtoascii.c  rebuildAsciiIndex.c  rebuildMailIndex.c  shopconv.c  sign.c  split.c  webster.c  wld2html.c
